# ChangeLog for media-libs/alsa-lib
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.95 2004/12/16 08:57:41 corsair Exp $

  16 Dec 2004; Markus Rothe <corsair@gentoo.org> alsa-lib-1.0.6.ebuild:
  Stable on ppc64

  22 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.7.ebuild:
  Stable sparc. This is package.mask'd in the normal sparc profiles. Use the
  default-linux/sparc/sparc64/2004.3/alsa profile if you want to use alsa on
  sparc.

  12 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.7.ebuild:
  Added USE=doc support for bug #70918.

*alsa-lib-1.0.7 (12 Nov 2004)

  12 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -files/alsa-lib-1.0.3b-rate-capture.patch,
  +files/alsa-lib-1.0.7-pcm_wait.patch, alsa-lib-1.0.6.ebuild,
  +alsa-lib-1.0.7.ebuild:
  Version bump.

  07 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.6.ebuild:
  Stable amd64, x86.

  02 Nov 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-0.9.8.ebuild, alsa-lib-1.0.2.ebuild, alsa-lib-1.0.5.ebuild,
  alsa-lib-1.0.6.ebuild:
  Removing block on PDEPEND for ppc as they keyworded alsa-jack, so it's no
  longer neccessary.

  12 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.6.ebuild:
  Added a note about bug #65347

  06 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.6.ebuild:
  get_libdir fixes, and no longer symlinking to old libasound lib.

  02 Oct 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -alsa-lib-0.5.10b.ebuild, -alsa-lib-0.9.0_rc2.ebuild,
  -alsa-lib-0.9.2.ebuild:
  Removing old versions.

  27 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.6.ebuild:
  Back into ~arch until we can solve bug #65347.

  23 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  alsa-lib-1.0.6.ebuild:
  Stable amd64, x86.

*alsa-lib-1.0.6 (23 Aug 2004)
