@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/Attic/alsa-jack-1.0.7.ebuild,v 1.2 2004/11/22 18:55:14 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/Attic/alsa-jack-1.0.7.ebuild,v 1.3 2004/12/19 05:03:22 eradicator Exp $
 
 IUSE=""
 
@@ -14,7 +14,7 @@ HOMEPAGE="http://www.alsa-project.org/"
 SRC_URI="mirror://alsaproject/lib/alsa-lib-${MY_PV}.tar.bz2"
 
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 sparc ~x86"
+KEYWORDS="~alpha amd64 ~ppc ~ppc64 sparc x86"
 LICENSE="GPL-2 LGPL-2.1"
 
 DEPEND="~media-libs/alsa-lib-${PV}
