@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/alsa-jack
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/Attic/ChangeLog,v 1.20 2004/12/16 08:55:27 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/alsa-jack/Attic/ChangeLog,v 1.21 2004/12/19 05:03:22 eradicator Exp $
+
+  18 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  alsa-jack-1.0.7.ebuild:
+  Stable amd64, x86.
 
   16 Dec 2004; Markus Rothe <corsair@gentoo.org> alsa-jack-1.0.6.ebuild:
   Stable on ppc64
